# MacTranscribe

./: .gitmodules  GEMINI.md  project.yml
.gemini/: settings.json
MacWhisper/: Bridging-Header.h  MacWhisperApp.swift
MacWhisper.xcodeproj/: project.pbxproj
MacWhisper.xcodeproj/project.xcworkspace/xcuserdata/yancunzhu.xcuserdatad/: UserInterfaceState.xcuserstate
MacWhisper.xcodeproj/xcuserdata/yancunzhu.xcuserdatad/xcschemes/: xcschememanagement.plist
MacWhisper/Model/: TranscriptionSegment.swift  WhisperModel.swift
MacWhisper/Service/: ModelDownloaderService.swift  TranscriptionService.swift
MacWhisper/View/: ContentView.swift  ModelSelectionView.swift  TranscriptionView.swift
MacWhisper/ViewModel/: ModelManagerViewModel.swift  TranscriptionViewModel.swift
MacWhisper/Whisper/: CMakeLists.txt  build.sh  whisper_wrapper.cpp  whisper_wrapper.h
